changed the text in the nav bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         
        <nav>
-           <h2>choose your helper</h2>
+           <h2>choose your annoyer</h2>
            <button id="fly">fly</button>
            <button id="ghost">ghost</button>
            <button id="airplane">paper airplane</button>
